--- a/contacto.css
+++ b/contacto.css
@@ -230,6 +230,190 @@ body {
     overflow: hidden;
   }
 }
+/* Estilos del modal del carrito */
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1000;
+  top: 0;
+  right: 0;
+  width: 25%;
+  height: 100%;
+  background-color: #EFF0F5;
+  box-shadow: -5px 0 15px rgba(0, 0, 0, .5);
+  padding: 20px;
+  border-radius: 10px 0 0 10px;
+  overflow-y: auto;
+}
+
+.modal-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 10px;
+}
+
+.modal-close {
+  cursor: pointer;
+  font-size: 2rem;
+  color: #0E1B4D;
+}
+
+.modal-body {
+  padding: 20px;
+}
+
+.carrito-vacio {
+  font-size: 1rem;
+  color: #0E1B4D;
+}
+
+.producto-nombre {
+  font-size: 1.5rem;
+  color: #0E1B4D;
+}
+
+.producto-precio {
+  font-size: 1.375rem;
+  color: #0E1B4D;
+}
+
+.total-pagar {
+  font-size: 1.625rem;
+  font-weight: bold;
+  margin-top: 20px;
+  color: #0E1B4D;
+}
+
+.modal-producto {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+.modal-producto img {
+  width: 100px;
+  height: 100px;
+  margin-right: 20px;
+}
+
+.carrito-titulo {
+  color: #0E1B4D;
+  font-size: 1.25rem;
+}
+
+.pagar-todo {
+  background-color: #0E1B4D;
+  color: #EFF0F5;
+  padding: 10px 20px;
+  border-radius: 25px;
+  text-decoration: none;
+  margin-top: 20px;
+  transition: background-color 0.3s ease;
+  margin: 40px auto;
+}
+
+.pagar-todo:hover {
+  background-color: #000000;
+  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
+  color: #EFF0F5;
+}
+
+.eliminar-producto {
+  cursor: pointer;
+  font-size: 1.65rem;
+  color: #FF0000;
+  margin-left: -46px;
+}
+
+.subtotal-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 40px);
+  padding: 0 20px;
+}
+
+.subtotal-title{
+  font-size: 1.2rem;
+  color: #0E1B4D;
+  font-weight: 600;
+}
+.subtotal-amount {
+  font-size: 1.2rem;
+  color: #0E1B4D;
+}
+
+.cantidad-controles {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 5px;
+  border: 1px solid #0E1B4D;
+  border-radius: 25px;
+  padding: 5px;
+  max-width: 80px;
+  margin: 20px auto;
+}
+
+.cantidad-controles button {
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  color: #0E1B4D;
+  font-size: 1rem;
+  line-height: 1;
+  width: 24px;
+  height: 24px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.cantidad-controles span {
+  font-size: 1rem;
+  color: #0E1B4D;
+}
+
+.product-price-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.header-producto, .header-precio {
+  font-size: 1rem;
+  color: #0E1B4D;
+}
+
+.divider {
+  border: 0;
+  border-top: 1px solid #ddd;
+  margin: 20px 0;
+}
+
+.impuestos {
+  font-size: 0.875rem;
+  color: #0E1B4D;
+  text-align: center;
+  margin-top: 10px;
+}
+
+/* Media Queries para hacer responsive */
+@media (max-width: 480px) {
+  .modal {
+    width: 100%; /* Asegura que la modal ocupe el 100% del ancho */
+  }
+}
+
+@media (max-width: 768px) {
+  .modal {
+    width: 75%; /* Asegura que la modal ocupe el 75% del ancho */
+  }
+}
   /**************
    FOOTER
 **************/
