--- a/styles.css
+++ b/styles.css
@@ -602,47 +602,71 @@ body {
   75% { transform: scale(1.05); }
 }
 
-
-/*****************************
-   GALERIA 3 IMAGENES
-*****************************/
-.gallery {
-  display: flex;
-  gap: 20px;
-  justify-content: center;
-  margin-top: 50px;
+/*carousel*/
+.carousel-containerR {
+  position: relative;
+  max-width: 60%;
+  margin: auto;
+  overflow: hidden;
+  margin-top: 36px;
 }
 
-.gallery img {
-  width: 300px;
-  height: 300px;
-  object-fit: cover;
-  border-radius: 25%;
+.carousel {
+  display: flex;
+  transition: transform 0.5s ease-in-out;
+}
+
+.carousel-item {
+  min-width: 100%;
+  box-sizing: border-box;
+}
+
+.carousel-buttonn {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  border: none;
+  color: white;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.prev {
+  left: 0;
+}
+
+.next {
+  right: 0;
+}
+
+.rounded-image {
+  width: 100%;
+  border-radius: 25px;
 }
 
 .description3 {
   text-align: center;
   margin-top: 20px;
-  color: #0E1B4D;
 }
 
-.button {
-  display: inline-block;
-  background-color: #0E1B4D;
-  color: #EFF0F5;
-  padding: 10px 20px;
-  border-radius: 25px;
-  text-decoration: none;
-  margin-top: 20px;
-  transition: background-color 0.3s ease;
-  margin-bottom: 80px;
+@media screen and (max-width: 768px) {
+  .carousel-button {
+      padding: 5px;
+  }
 }
 
-.button:hover {
-  background-color: #000000;
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.4);
-  color: #EFF0F5;
+@media screen and (max-width: 480px) {
+  .description3 p {
+      font-size: 14px;
+  }
+
+  .description3 .button {
+      font-size: 14px;
+      padding: 10px;
+  }
 }
+
 
 /*****************************
      PRODUCTO
