--- a/styles.css
+++ b/styles.css
@@ -63,15 +63,58 @@ body {
   width: 0;
   opacity: 0;
   transition: width 0.3s ease, opacity 0.3s ease;
-  position: absolute;
-  right: 40px;
+  background-color: #0E1B4D;
+  color: #EFF0F5;
 }
 
 .navbar .search-container input[type="text"].active {
-  width: 200px;
+  width: 100%;
   opacity: 1;
+  margin-right: 0;
+  padding: 10px 20px;
+}
+.navbar .search-container #close-icon.hidden {
+  display: none;
 }
 
+.navbar .search-container #close-icon {
+  position: absolute;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+}
+
+.search-results {
+  display: none;
+  position: absolute;
+  top: 40px;
+  left: 0;
+  background-color: #0E1B4D;
+  color: #EFF0F5;
+  width: 100%;
+  border-radius: 0 0 25px 25px;
+  z-index: 10;
+}
+
+.search-results .result-item {
+  padding: 10px;
+  border-bottom: 1px solid #1A237E;
+}
+
+.search-results .result-item:last-child {
+  border-bottom: none;
+}
+
+.search-results .result-item:hover {
+  background-color: #1A237E;
+}
+
+.search-results img {
+  width: 50px;
+  height: 50px;
+  margin-right: 10px;
+}
 .navbar .search-container img,
 .carrito img {
   width: 26px;
